# NullState_Contracts

./: README.md  package-lock.json  package.json
NFT-contract/: Forc.toml  fuel-toolchain.toml
NFT-contract/src/: main.sw
deploy-scripts/: Cargo.toml
deploy-scripts/src/: main.rs
nft_fixed_price_swap_predicate/: Cargo.toml  Forc.toml
nft_fixed_price_swap_predicate/src/: main.sw
nft_fixed_price_swap_predicate/tests/: harness.rs
nft_fixed_price_swap_predicate/tests/utils/: interface.rs  mod.rs  setupnft.rs
src/app/predicates/: page.tsx
