[package]
name = "nft_fixed_price_swap_predicate"
version = "0.1.0"
edition = "2021"
authors = ["user"]
license = "Apache-2.0"

[dependencies]
fuels = { version = "0.62.0", features = ["fuel-core-lib"] }
sha2 = { version = "0.10.7" }
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"